# HHXY-LBT

./: .gitattributes  README.md
HHXY-LBT-NoZip&7z/: .gitattributes  CMakeLists.txt  MVviewer_Ver2.2.5_Linux_x86_Build20200910.run  README.md  configer.h
HHXY-LBT-NoZip&7z/Detection/: number.cpp
HHXY-LBT-NoZip&7z/Thread/: threads.h.autosave  threads_serial.cpp  threads_some.cpp
HHXY-LBT-NoZip&7z/dahua/: StreamRetrieve.h  streamRetrieve.cpp
HHXY-LBT-NoZip&7z/xml/: R.xml  hog_grey_4.23.xml  svm_grey_4.23.xml
HHXY-LBT-code/: README.md  main.cpp
HHXY-LBT-code/Detection/: detect.cpp
电控代码/: serial.c  serial.h
